--- a/Teapot/FIT0201ANISUTINA_Teapot/mainwindow.ui
+++ b/Teapot/FIT0201ANISUTINA_Teapot/mainwindow.ui
@@ -15,33 +15,17 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="1">
-     <widget class="QSlider" name="segmentNumerSlider">
-      <property name="maximum">
-       <number>32</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
+    <item row="2" column="3">
+     <widget class="QLabel" name="segmentsLbl">
+      <property name="text">
+       <string>segments</string>
       </property>
      </widget>
+    </item>
+    <item row="0" column="0" colspan="5">
+     <widget class="TeapotProjectorWidget" name="teapotWg" native="true"/>
     </item>
     <item row="2" column="1">
-     <widget class="QLabel" name="segmentNumberLbl">
-      <property name="maximumSize">
-       <size>
-        <width>16777215</width>
-        <height>10</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>0</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
      <widget class="QSlider" name="distanceSlider">
       <property name="minimum">
        <number>200</number>
@@ -60,15 +44,71 @@
       </property>
      </widget>
     </item>
+    <item row="2" column="2">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="2" column="0">
+     <widget class="QLabel" name="distanceLbl_2">
+      <property name="text">
+       <string>distance</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="4">
+     <widget class="QLabel" name="segmentNumberLbl">
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>10</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
      <widget class="QLabel" name="distanceLbl">
       <property name="text">
        <string>300</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="0" colspan="2">
-     <widget class="TeapotProjectorWidget" name="teapotWg" native="true"/>
+    <item row="2" column="4">
+     <widget class="QSlider" name="segmentNumerSlider">
+      <property name="maximum">
+       <number>32</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QCheckBox" name="axisFlag">
+      <property name="text">
+       <string>axis</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="4">
+     <widget class="QComboBox" name="modelsBox"/>
     </item>
    </layout>
   </widget>
