--- a/Teapot/FIT0201ANISUTINA_Teapot/mainwindow.ui
+++ b/Teapot/FIT0201ANISUTINA_Teapot/mainwindow.ui
@@ -41,16 +41,19 @@
     <item row="2" column="1">
      <widget class="QSlider" name="distanceSlider">
       <property name="minimum">
-       <number>200</number>
+       <number>0</number>
       </property>
       <property name="maximum">
-       <number>1000</number>
+       <number>300</number>
       </property>
       <property name="singleStep">
        <number>10</number>
       </property>
+      <property name="value">
+       <number>150</number>
+      </property>
       <property name="sliderPosition">
-       <number>300</number>
+       <number>150</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
