--- a/Teapot/FIT0201ANISUTINA_Teapot/mainwindow.ui
+++ b/Teapot/FIT0201ANISUTINA_Teapot/mainwindow.ui
@@ -41,7 +41,7 @@
     <item row="2" column="1">
      <widget class="QSlider" name="distanceSlider">
       <property name="minimum">
-       <number>0</number>
+       <number>151</number>
       </property>
       <property name="maximum">
        <number>300</number>
@@ -50,10 +50,10 @@
        <number>10</number>
       </property>
       <property name="value">
-       <number>150</number>
+       <number>151</number>
       </property>
       <property name="sliderPosition">
-       <number>150</number>
+       <number>151</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -112,7 +112,7 @@
     <item row="3" column="1">
      <widget class="QLabel" name="distanceLbl">
       <property name="text">
-       <string>300</string>
+       <string>153</string>
       </property>
      </widget>
     </item>
@@ -128,6 +128,13 @@
     </item>
     <item row="0" column="0" colspan="6">
      <widget class="TeapotProjectorWidget" name="teapotWg" native="true"/>
+    </item>
+    <item row="1" column="1">
+     <widget class="QCheckBox" name="boxFlag">
+      <property name="text">
+       <string>box</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
