--- a/Morph/FIT0201ANISUTINA_Morph/mainwindow.ui
+++ b/Morph/FIT0201ANISUTINA_Morph/mainwindow.ui
@@ -50,10 +50,10 @@
        </size>
       </property>
       <property name="minimum">
-       <number>-100</number>
+       <number>-300</number>
       </property>
       <property name="maximum">
-       <number>100</number>
+       <number>300</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -69,10 +69,10 @@
        </size>
       </property>
       <property name="minimum">
-       <number>-100</number>
+       <number>-300</number>
       </property>
       <property name="maximum">
-       <number>100</number>
+       <number>300</number>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -101,6 +101,9 @@
        </property>
        <property name="text">
         <string>nearest</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
        </property>
       </widget>
       <widget class="QRadioButton" name="linearLayerBtn">
